--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <div id="demo"></div>
 <div id="content"></div>
+<div id="products"></div>
 <script src="bundle.js"></script>
 </body>
 </html>
